--- a/reg/xml/summarize.ipynb
+++ b/reg/xml/summarize.ipynb
@@ -48,7 +48,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "#\n",
@@ -71,6 +73,77 @@
     "        continue\n",
     "        \n",
     "    print(f'{objectid}\\t{mandatory}\\t{name}')\n",
+    "    \n",
+    "    #save as json\n",
+    "#     outjson = f'output/{cnt}.json'\n",
+    "#     with open(outjson, 'w') as fp:\n",
+    "#         json.dump(dic, fp, indent=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "#\n",
+    "# Search resource name\n",
+    "#\n",
+    "\n",
+    "keyword = 'device'\n",
+    "\n",
+    "for xmlfile in glob.glob('*.xml'):\n",
+    "    \n",
+    "    with open(xmlfile, 'r') as fp:\n",
+    "        xml = fp.read()\n",
+    "    dic = xmltodict.parse(xml)\n",
+    "\n",
+    "    object = dic['LWM2M']['Object']\n",
+    "    object_id = object['ObjectID']\n",
+    "    object_name = object['Name']\n",
+    "    object_mandatory = object['Mandatory']\n",
+    "    \n",
+    "    #resources\n",
+    "    for resource in object['Resources']['Item']:\n",
+    "        resource_id = resource['@ID']\n",
+    "        resource_name = resource['Name']\n",
+    "        resource_mandatory = resource['Mandatory']\n",
+    "        \n",
+    "        if keyword.lower() in resource_name.lower():\n",
+    "            print(f'{object_name} -> {resource_name} ({object_id},{resource_id})')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "# for Hitachi SN\n",
+    "#\n",
+    "\n",
+    "\n",
+    "for objectid in [0, 1, 3, 4]:\n",
+    "    \n",
+    "    xmlfile = f'{objectid}.xml'\n",
+    "    \n",
+    "    with open(xmlfile, 'r') as fp:\n",
+    "        xml = fp.read()\n",
+    "    dic = xmltodict.parse(xml)\n",
+    "\n",
+    "    object = dic['LWM2M']['Object']\n",
+    "    object_name = object['Name']\n",
+    "    object_mandatory = object['Mandatory']\n",
+    "    print(f'\\n{object_name} ({objectid}) - {object_mandatory}')\n",
+    "    \n",
+    "    #resources\n",
+    "    for resource in object['Resources']['Item']:\n",
+    "        resource_name = resource['Name']\n",
+    "        resource_mandatory = resource['Mandatory']\n",
+    "        print(f'  {resource_name} - {resource_mandatory}')\n",
     "    \n",
     "    #save as json\n",
     "#     outjson = f'output/{cnt}.json'\n",
